<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Services</string>

    <!-- GENERAL -->
    <string name="start_btn_caption">Start</string>
    <string name="stop_btn_caption">STOP</string>
    <string name="success_msg">Finished successfully</string>
    <string name="failed_msg">Failed</string>
    <string name="started_msg">Service started</string>
    <string name="cancel_btn_caption">Cancel</string>

    <!-- INTENT SERVICE -->
    <string name="intentservice_title">IntentService</string>

    <!-- STARTED SERVICE -->
    <string name="startedservice_title">Started Service</string>
    <string name="pid_caption">PID:%1$d</string>
    <string name="queued_msg">%1$d tasks in queue</string>

    <!-- STARTED ASYNC SERVICE -->
    <string name="startedasyncservice_title">Started Async\nService</string>

    <!-- BOUND SERVICE -->
    <string name="bound_service_title">Bound service</string>
    <string name="bind_btn_caption">BIND</string>
    <string name="bound_msg">Bound to service</string>
    <string name="started_and_bound_msg">Service started and bound to</string>
    <string name="unbind_btn_caption">UNBIND</string>
    <string name="foreground_chbx_caption">in foreground</string>
    <string name="notification_message">Service started in foreground</string>

</resources>
