<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bound_service_title" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/start_stop_boundService_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_btn_caption" />

            <Button
                android:id="@+id/bind_unbind_boundService_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bind_btn_caption" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal">

            <ProgressBar
                android:id="@+id/progress"
                style="@android:style/Widget.ProgressBar.Large.Inverse"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="gone" />

            <SeekBar
                android:id="@+id/boundService_indicator_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/boundService_status"
                android:max="120"
                android:progress="30" />

            <TextView
                android:id="@+id/boundService_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>