<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startedasyncservice_title"/>

        <LinearLayout
            android:id="@+id/progresses_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:orientation="vertical"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/start_startedAsyncServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_btn_caption"/>
            <Button
                android:id="@+id/stop_startedAsyncServiceBtnServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/stop_btn_caption"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal">

            <SeekBar
                android:id="@+id/startedAsyncService_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20000"
                android:progress="5000"/>

            <TextView
                android:id="@+id/startedAsyncService_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

</LinearLayout>